# notpad

./: Cargo.toml
src/: editor_stylesheet.rs  main.rs
