[package]
name = "notpad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.0", features = ["tokio", "debug"] }
rfd = "0.14"
tokio = { version = "1.36.0", features = ["fs"] }
uuid = { version = "1.6.1", features = ["v4"] }
